PL/Practica2/bison/ejemplo9/ejemplo9.output
Terminales no usados en gramática

   INDEFINIDA


Estado 87 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: list $end

    1 list: %empty
    2     | list stmt ';'
    3     | list error ';'

    4 stmt: %empty
    5     | asgn
    6     | PRINT expr
    7     | READ '(' VAR ')'
    8     | while cond stmt end
    9     | if cond stmt end
   10     | if cond stmt end ELSE stmt end
   11     | '{' stmtlist '}'

   12 asgn: VAR ASIGNACION expr
   13     | CONSTANTE ASIGNACION expr

   14 cond: '(' expr ')'

   15 while: WHILE

   16 if: IF

   17 end: %empty

   18 stmtlist: %empty
   19         | stmtlist stmt ';'

   20 expr: NUMBER
   21     | VAR
   22     | CONSTANTE
   23     | asgn
   24     | FUNCION0_PREDEFINIDA '(' ')'
   25     | FUNCION1_PREDEFINIDA '(' expr ')'
   26     | FUNCION2_PREDEFINIDA '(' expr ',' expr ')'
   27     | '(' expr ')'
   28     | expr '+' expr
   29     | expr '-' expr
   30     | expr '*' expr
   31     | expr '/' expr
   32     | expr '%' expr
   33     | expr '^' expr
   34     | '-' expr
   35     | '+' expr
   36     | expr MAYOR_QUE expr
   37     | expr MAYOR_IGUAL expr
   38     | expr MENOR_QUE expr
   39     | expr MENOR_IGUAL expr
   40     | expr IGUAL expr
   41     | expr DISTINTO expr
   42     | expr Y_LOGICO expr
   43     | expr O_LOGICO expr
   44     | NEGACION expr


Terminales con las reglas donde aparecen

$end (0) 0
'%' (37) 32
'(' (40) 7 14 24 25 26 27
')' (41) 7 14 24 25 26 27
'*' (42) 30
'+' (43) 28 35
',' (44) 26
'-' (45) 29 34
'/' (47) 31
';' (59) 2 3 19
'^' (94) 33
'{' (123) 11
'}' (125) 11
error (256) 3
NUMBER (258) 20
VAR (259) 7 12 21
CONSTANTE (260) 13 22
FUNCION0_PREDEFINIDA (261) 24
FUNCION1_PREDEFINIDA (262) 25
FUNCION2_PREDEFINIDA (263) 26
INDEFINIDA (264)
PRINT (265) 6
WHILE (266) 15
IF (267) 16
ELSE (268) 10
READ (269) 7
ASIGNACION (270) 12 13
O_LOGICO (271) 43
Y_LOGICO (272) 42
MAYOR_QUE (273) 36
MENOR_QUE (274) 38
MENOR_IGUAL (275) 39
MAYOR_IGUAL (276) 37
DISTINTO (277) 41
IGUAL (278) 40
UNARIO (279)
NEGACION (280) 44


No terminales con las reglas donde aparecen

$accept (38)
    en la izquierda: 0
list (39)
    en la izquierda: 1 2 3, en la derecha: 0 2 3
stmt (40)
    en la izquierda: 4 5 6 7 8 9 10 11, en la derecha: 2 8 9 10 19
asgn (41)
    en la izquierda: 12 13, en la derecha: 5 23
cond (42)
    en la izquierda: 14, en la derecha: 8 9 10
while (43)
    en la izquierda: 15, en la derecha: 8
if (44)
    en la izquierda: 16, en la derecha: 9 10
end (45)
    en la izquierda: 17, en la derecha: 8 9 10
stmtlist (46)
    en la izquierda: 18 19, en la derecha: 11 19
expr (47)
    en la izquierda: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44, en la derecha: 6 12 13 14 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44


State 0

    0 $accept: . list $end

    $default  reduce usando la regla 1 (list)

    list  ir al estado 1


State 1

    0 $accept: list . $end
    2 list: list . stmt ';'
    3     | list . error ';'

    $end       desplazar e ir al estado 2
    error      desplazar e ir al estado 3
    VAR        desplazar e ir al estado 4
    CONSTANTE  desplazar e ir al estado 5
    PRINT      desplazar e ir al estado 6
    WHILE      desplazar e ir al estado 7
    IF         desplazar e ir al estado 8
    READ       desplazar e ir al estado 9
    '{'        desplazar e ir al estado 10

    ';'  reduce usando la regla 4 (stmt)

    stmt   ir al estado 11
    asgn   ir al estado 12
    while  ir al estado 13
    if     ir al estado 14


State 2

    0 $accept: list $end .

    $default  aceptar


State 3

    3 list: list error . ';'

    ';'  desplazar e ir al estado 15


State 4

   12 asgn: VAR . ASIGNACION expr

    ASIGNACION  desplazar e ir al estado 16


State 5

   13 asgn: CONSTANTE . ASIGNACION expr

    ASIGNACION  desplazar e ir al estado 17


State 6

    6 stmt: PRINT . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 29


State 7

   15 while: WHILE .

    $default  reduce usando la regla 15 (while)


State 8

   16 if: IF .

    $default  reduce usando la regla 16 (if)


State 9

    7 stmt: READ . '(' VAR ')'

    '('  desplazar e ir al estado 30


State 10

   11 stmt: '{' . stmtlist '}'

    $default  reduce usando la regla 18 (stmtlist)

    stmtlist  ir al estado 31


State 11

    2 list: list stmt . ';'

    ';'  desplazar e ir al estado 32


State 12

    5 stmt: asgn .

    $default  reduce usando la regla 5 (stmt)


State 13

    8 stmt: while . cond stmt end

    '('  desplazar e ir al estado 33

    cond  ir al estado 34


State 14

    9 stmt: if . cond stmt end
   10     | if . cond stmt end ELSE stmt end

    '('  desplazar e ir al estado 33

    cond  ir al estado 35


State 15

    3 list: list error ';' .

    $default  reduce usando la regla 3 (list)


State 16

   12 asgn: VAR ASIGNACION . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 36


State 17

   13 asgn: CONSTANTE ASIGNACION . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 37


State 18

   20 expr: NUMBER .

    $default  reduce usando la regla 20 (expr)


State 19

   12 asgn: VAR . ASIGNACION expr
   21 expr: VAR .

    ASIGNACION  desplazar e ir al estado 16

    $default  reduce usando la regla 21 (expr)


State 20

   13 asgn: CONSTANTE . ASIGNACION expr
   22 expr: CONSTANTE .

    ASIGNACION  desplazar e ir al estado 17

    $default  reduce usando la regla 22 (expr)


State 21

   24 expr: FUNCION0_PREDEFINIDA . '(' ')'

    '('  desplazar e ir al estado 38


State 22

   25 expr: FUNCION1_PREDEFINIDA . '(' expr ')'

    '('  desplazar e ir al estado 39


State 23

   26 expr: FUNCION2_PREDEFINIDA . '(' expr ',' expr ')'

    '('  desplazar e ir al estado 40


State 24

   35 expr: '+' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 41


State 25

   34 expr: '-' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 42


State 26

   44 expr: NEGACION . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 43


State 27

   27 expr: '(' . expr ')'

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 44


State 28

   23 expr: asgn .

    $default  reduce usando la regla 23 (expr)


State 29

    6 stmt: PRINT expr .
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    O_LOGICO     desplazar e ir al estado 45
    Y_LOGICO     desplazar e ir al estado 46
    MAYOR_QUE    desplazar e ir al estado 47
    MENOR_QUE    desplazar e ir al estado 48
    MENOR_IGUAL  desplazar e ir al estado 49
    MAYOR_IGUAL  desplazar e ir al estado 50
    DISTINTO     desplazar e ir al estado 51
    IGUAL        desplazar e ir al estado 52
    '+'          desplazar e ir al estado 53
    '-'          desplazar e ir al estado 54
    '*'          desplazar e ir al estado 55
    '/'          desplazar e ir al estado 56
    '%'          desplazar e ir al estado 57
    '^'          desplazar e ir al estado 58

    $default  reduce usando la regla 6 (stmt)


State 30

    7 stmt: READ '(' . VAR ')'

    VAR  desplazar e ir al estado 59


State 31

   11 stmt: '{' stmtlist . '}'
   19 stmtlist: stmtlist . stmt ';'

    VAR        desplazar e ir al estado 4
    CONSTANTE  desplazar e ir al estado 5
    PRINT      desplazar e ir al estado 6
    WHILE      desplazar e ir al estado 7
    IF         desplazar e ir al estado 8
    READ       desplazar e ir al estado 9
    '{'        desplazar e ir al estado 10
    '}'        desplazar e ir al estado 60

    $default  reduce usando la regla 4 (stmt)

    stmt   ir al estado 61
    asgn   ir al estado 12
    while  ir al estado 13
    if     ir al estado 14


State 32

    2 list: list stmt ';' .

    $default  reduce usando la regla 2 (list)


State 33

   14 cond: '(' . expr ')'

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 62


State 34

    8 stmt: while cond . stmt end

    VAR        desplazar e ir al estado 4
    CONSTANTE  desplazar e ir al estado 5
    PRINT      desplazar e ir al estado 6
    WHILE      desplazar e ir al estado 7
    IF         desplazar e ir al estado 8
    READ       desplazar e ir al estado 9
    '{'        desplazar e ir al estado 10

    $default  reduce usando la regla 4 (stmt)

    stmt   ir al estado 63
    asgn   ir al estado 12
    while  ir al estado 13
    if     ir al estado 14


State 35

    9 stmt: if cond . stmt end
   10     | if cond . stmt end ELSE stmt end

    VAR        desplazar e ir al estado 4
    CONSTANTE  desplazar e ir al estado 5
    PRINT      desplazar e ir al estado 6
    WHILE      desplazar e ir al estado 7
    IF         desplazar e ir al estado 8
    READ       desplazar e ir al estado 9
    '{'        desplazar e ir al estado 10

    $default  reduce usando la regla 4 (stmt)

    stmt   ir al estado 64
    asgn   ir al estado 12
    while  ir al estado 13
    if     ir al estado 14


State 36

   12 asgn: VAR ASIGNACION expr .
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    O_LOGICO     desplazar e ir al estado 45
    Y_LOGICO     desplazar e ir al estado 46
    MAYOR_QUE    desplazar e ir al estado 47
    MENOR_QUE    desplazar e ir al estado 48
    MENOR_IGUAL  desplazar e ir al estado 49
    MAYOR_IGUAL  desplazar e ir al estado 50
    DISTINTO     desplazar e ir al estado 51
    IGUAL        desplazar e ir al estado 52
    '+'          desplazar e ir al estado 53
    '-'          desplazar e ir al estado 54
    '*'          desplazar e ir al estado 55
    '/'          desplazar e ir al estado 56
    '%'          desplazar e ir al estado 57
    '^'          desplazar e ir al estado 58

    $default  reduce usando la regla 12 (asgn)


State 37

   13 asgn: CONSTANTE ASIGNACION expr .
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    O_LOGICO     desplazar e ir al estado 45
    Y_LOGICO     desplazar e ir al estado 46
    MAYOR_QUE    desplazar e ir al estado 47
    MENOR_QUE    desplazar e ir al estado 48
    MENOR_IGUAL  desplazar e ir al estado 49
    MAYOR_IGUAL  desplazar e ir al estado 50
    DISTINTO     desplazar e ir al estado 51
    IGUAL        desplazar e ir al estado 52
    '+'          desplazar e ir al estado 53
    '-'          desplazar e ir al estado 54
    '*'          desplazar e ir al estado 55
    '/'          desplazar e ir al estado 56
    '%'          desplazar e ir al estado 57
    '^'          desplazar e ir al estado 58

    $default  reduce usando la regla 13 (asgn)


State 38

   24 expr: FUNCION0_PREDEFINIDA '(' . ')'

    ')'  desplazar e ir al estado 65


State 39

   25 expr: FUNCION1_PREDEFINIDA '(' . expr ')'

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 66


State 40

   26 expr: FUNCION2_PREDEFINIDA '(' . expr ',' expr ')'

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 67


State 41

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   35     | '+' expr .
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    '^'  desplazar e ir al estado 58

    $default  reduce usando la regla 35 (expr)


State 42

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   34     | '-' expr .
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    '^'  desplazar e ir al estado 58

    $default  reduce usando la regla 34 (expr)


State 43

   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr
   44     | NEGACION expr .

    '^'  desplazar e ir al estado 58

    $default  reduce usando la regla 44 (expr)


State 44

   27 expr: '(' expr . ')'
   28     | expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    O_LOGICO     desplazar e ir al estado 45
    Y_LOGICO     desplazar e ir al estado 46
    MAYOR_QUE    desplazar e ir al estado 47
    MENOR_QUE    desplazar e ir al estado 48
    MENOR_IGUAL  desplazar e ir al estado 49
    MAYOR_IGUAL  desplazar e ir al estado 50
    DISTINTO     desplazar e ir al estado 51
    IGUAL        desplazar e ir al estado 52
    '+'          desplazar e ir al estado 53
    '-'          desplazar e ir al estado 54
    '*'          desplazar e ir al estado 55
    '/'          desplazar e ir al estado 56
    '%'          desplazar e ir al estado 57
    '^'          desplazar e ir al estado 58
    ')'          desplazar e ir al estado 68


State 45

   43 expr: expr O_LOGICO . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 69


State 46

   42 expr: expr Y_LOGICO . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 70


State 47

   36 expr: expr MAYOR_QUE . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 71


State 48

   38 expr: expr MENOR_QUE . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 72


State 49

   39 expr: expr MENOR_IGUAL . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 73


State 50

   37 expr: expr MAYOR_IGUAL . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 74


State 51

   41 expr: expr DISTINTO . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 75


State 52

   40 expr: expr IGUAL . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 76


State 53

   28 expr: expr '+' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 77


State 54

   29 expr: expr '-' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 78


State 55

   30 expr: expr '*' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 79


State 56

   31 expr: expr '/' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 80


State 57

   32 expr: expr '%' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 81


State 58

   33 expr: expr '^' . expr

    NUMBER                desplazar e ir al estado 18
    VAR                   desplazar e ir al estado 19
    CONSTANTE             desplazar e ir al estado 20
    FUNCION0_PREDEFINIDA  desplazar e ir al estado 21
    FUNCION1_PREDEFINIDA  desplazar e ir al estado 22
    FUNCION2_PREDEFINIDA  desplazar e ir al estado 23
    '+'                   desplazar e ir al estado 24
    '-'                   desplazar e ir al estado 25
    NEGACION              desplazar e ir al estado 26
    '('                   desplazar e ir al estado 27

    asgn  ir al estado 28
    expr  ir al estado 82


State 59

    7 stmt: READ '(' VAR . ')'

    ')'  desplazar e ir al estado 83


State 60

   11 stmt: '{' stmtlist '}' .

    $default  reduce usando la regla 11 (stmt)


State 61

   19 stmtlist: stmtlist stmt . ';'

    ';'  desplazar e ir al estado 84


State 62

   14 cond: '(' expr . ')'
   28 expr: expr . '+' expr
   29     | expr . '-' expr
   30     | expr . '*' expr
   31     | expr . '/' expr
   32     | expr . '%' expr
   33     | expr . '^' expr
   36     | expr . MAYOR_QUE expr
   37     | expr . MAYOR_IGUAL expr
   38     | expr . MENOR_QUE expr
   39     | expr . MENOR_IGUAL expr
   40     | expr . IGUAL expr
   41     | expr . DISTINTO expr
   42     | expr . Y_LOGICO expr
   43     | expr . O_LOGICO expr

    O_LOGICO     desplazar e ir al estado 45
    Y_LOGICO     desplazar e ir al estado 46
    MAYOR_QUE    desplazar e ir al estado 47
    MENOR_QUE    desplazar e ir al estado 48
    MENOR_IGUAL  desplazar e ir al estado 49
    MAYOR_IGUAL  desplazar e ir al estado 50
    DISTINTO     desplazar e ir al estado 51
    IGUAL        desplazar e ir al estado 52
    '+'          desplazar e ir al estado 53
    '-'          desplazar e ir al estado 54
    '*'          desplazar e ir al estado 55
    '/'          desplazar e ir al estado 56
    '%'          desplazar e ir al estado 57
    '^'          desplazar e ir al estado 58
    ')'          desplazar e ir al estado 85


State 63

    8 stmt: while cond stmt . end

    $default  reduce usando la regla 17 (end)

    end  ir al estado 86


State 64

    9 stmt: if cond stmt . end
   10     | if cond stmt . end ELSE stmt end

    $default  reduce usando la regla 17 (end)

    end  ir al estado 87


State 65

   24 expr: FUNCION0_PREDEFINIDA '(' ')' .

    $default  reduce usando la regla 24 (expr)


State 66
